<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_channel"
    tools:context="ap2pr.chatapp.AddChannelActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/channels_activity_title"
        android:text="@string/title_activity_add_channel"
        android:textSize="30sp"
        android:textColor="@color/holo_red_light"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/chat_app_logo_small"
        android:contentDescription="@string/description"
        android:layout_above="@+id/channelId"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/channelId"
        android:hint="@string/channel_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/channelName"
        android:hint="@string/channel_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/channelId"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iconText"
        android:text="@string/icon_text"
        android:textSize="18sp"
        android:layout_below="@+id/channelName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon1"
        android:layout_below="@+id/channelName"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon1"
        android:contentDescription="@string/description"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon2"
        android:src="@drawable/icon2_b_w"
        android:layout_below="@+id/channelName"
        android:contentDescription="@string/description"
        android:layout_toLeftOf="@+id/icon1"
        android:layout_toStartOf="@+id/icon1"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon3"
        android:src="@drawable/icon3_b_w"
        android:layout_below="@+id/channelName"
        android:contentDescription="@string/description"
        android:layout_toLeftOf="@+id/icon2"
        android:layout_toStartOf="@+id/icon2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon4"
        android:src="@drawable/icon4_b_w"
        android:layout_below="@+id/channelName"
        android:contentDescription="@string/description"
        android:layout_toRightOf="@+id/icon1"
        android:layout_toEndOf="@+id/icon1"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon5"
        android:src="@drawable/icon5_b_w"
        android:layout_below="@+id/channelName"
        android:contentDescription="@string/description"
        android:layout_toRightOf="@+id/icon4"
        android:layout_toEndOf="@+id/icon4"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_channel"
        android:padding="10dp"
        android:background="@color/green"
        android:textSize="30sp"
        android:textColor="@color/gray"
        android:layout_below="@+id/icon1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>
