<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/holo_red_light"
        android:textSize="50sp" />


    <ImageView
        android:id="@+id/settings_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/settings" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:id="@+id/servers"
        android:layout_below="@id/settings_image">

        <TextView
            android:id="@+id/servers_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servers_list"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/blue"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ListView
            android:id="@+id/servers_list"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/servers_headline"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:layout_below="@+id/servers">

        <TextView
            android:id="@+id/channels_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channels_list"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/blue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/channels_list"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/channels_headline"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_to_app"
        android:id="@+id/goToAppButton"
        android:layout_alignBottom="@+id/settings_image"
        android:layout_toRightOf="@+id/settings_image"
        android:layout_toEndOf="@+id/settings_image" />

</RelativeLayout>